Apply Material UI

--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,13 @@ img {
   width: 64px;
   height: 64px;
 }
+
+.root {
+  width: 100%;
+  margin-top: 3rem;
+  overflow-x: auto;
+}
+
+.table {
+  min-width: 1080px;
+}
