--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,20 @@ img {
 .table {
   min-width: 1080px;
 }
+
+.Add-Inventory-Field {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #f0f0f0;
+  border: 2px solid #000;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 4px;
+}
+
+.dialogContent {
+  display: flex;
+  flex-direction: column;
+}
