--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,33 @@
-.inventory-profile-img {
+.inventoryImage {
   width: 64px;
   height: 64px;
 }
 
-.root {
-  width: 100%;
-  margin-top: 3rem;
-  overflow-x: auto;
-}
-
-.table {
-  min-width: 1080px;
-}
-
-.Add-Inventory-Field {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  background-color: #f0f0f0;
-  border: 2px solid #000;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 4px;
-}
-
-.dialogContent {
+.dialogForm {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+.dialogInputBox {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.dialogButtonBox {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: right;
+}
+
+.dialogButton {
+  background-color: #e91e63;
+  color: #fff;
+}
+
+.searchBar {
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid #ccc;
 }
